# Tubes2_RustDz

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker.yml
backend/src/: main.rs
backend/src/modules/: bfs.rs  dfs.rs  domnode.rs  mod.rs  p.rs  parser.rs  selector.rs  tree.rs
doc/: spek.txt
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ControlPanel.tsx
